force-app/main/default/objects/Opportunity/fields/NameStage__c.field-meta.xml
<CustomField>
    <fullName>NameStage__c</fullName>
    <description>System field, only used to give back the name and stage in the bulkupdateopportuntiy flow</description>
    <formula>Name + &quot; - &quot; +Text(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name &amp; Stage</label>
    <type>Text</type>
</CustomField>