force-app/main/default/objects/Opportunity/fields/NotificationfromCustomer__c.field-meta.xml
<CustomField>
    <fullName>NotificationfromCustomer__c</fullName>
    <description>(R-S1 by JD): Notification from Customer.</description>
    <label>Notification from Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>