force-app/main/default/objects/Opportunity/fields/NUCompetitorBAOCurrent__c.field-meta.xml
<CustomField>
    <fullName>NUCompetitorBAOCurrent__c</fullName>
    <label>xRemove Competitor BAO - Current</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alles-in-1</fullName>
            </value>
            <value>
                <fullName>Bazalt</fullName>
            </value>
            <value>
                <fullName>Blink Educatie</fullName>
            </value>
            <value>
                <fullName>Blink - Groove Me</fullName>
            </value>
            <value>
                <fullName>Boreaal</fullName>
            </value>
            <value>
                <fullName>CED</fullName>
            </value>
            <value>
                <fullName>CITO</fullName>
            </value>
            <value>
                <fullName>DaVinci</fullName>
            </value>
            <value>
                <fullName>Delubas</fullName>
            </value>
            <value>
                <fullName>Delubas - Leesparade</fullName>
            </value>
            <value>
                <fullName>Den Boer</fullName>
            </value>
            <value>
                <fullName>Deviant</fullName>
            </value>
            <value>
                <fullName>Eigen materiaal</fullName>
            </value>
            <value>
                <fullName>Elsevier Educatief</fullName>
            </value>
            <value>
                <fullName>Groen</fullName>
            </value>
            <value>
                <fullName>Het verkeerde beentje</fullName>
            </value>
            <value>
                <fullName>Intersym EDM</fullName>
            </value>
            <value>
                <fullName>Malmberg</fullName>
            </value>
            <value>
                <fullName>Malmberg - Argus Clou Akd</fullName>
            </value>
            <value>
                <fullName>Malmberg - Argus Clou Gsd</fullName>
            </value>
            <value>
                <fullName>Malmberg – Brandaan</fullName>
            </value>
            <value>
                <fullName>Malmberg - Handschrift</fullName>
            </value>
            <value>
                <fullName>Malmberg - Hello World</fullName>
            </value>
            <value>
                <fullName>Malmberg - Join In</fullName>
            </value>
            <value>
                <fullName>Malmberg - Karakter</fullName>
            </value>
            <value>
                <fullName>Malmberg - Meander</fullName>
            </value>
            <value>
                <fullName>Malmberg – Naut</fullName>
            </value>
            <value>
                <fullName>Malmberg - Pluspunt</fullName>
            </value>
            <value>
                <fullName>Malmberg - Staal</fullName>
            </value>
            <value>
                <fullName>Malmberg - Station Zuid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>