force-app/main/default/objects/Opportunity/fields/NUCompetitorVONew__c.field-meta.xml
<CustomField>
    <fullName>NUCompetitorVONew__c</fullName>
    <label>xRemove Competitor VO - New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Betawerk - 10voorBiologie</fullName>
            </value>
            <value>
                <fullName>Bettermarks</fullName>
            </value>
            <value>
                <fullName>Blink - Binnenstebuiten</fullName>
            </value>
            <value>
                <fullName>Blink – Eigentijds</fullName>
            </value>
            <value>
                <fullName>Blink - Grenzenloos</fullName>
            </value>
            <value>
                <fullName>Blink - Groove Me</fullName>
            </value>
            <value>
                <fullName>Blink - Plot26</fullName>
            </value>
            <value>
                <fullName>Blink - Saga</fullName>
            </value>
            <value>
                <fullName>Blink - Wired</fullName>
            </value>
            <value>
                <fullName>Boom</fullName>
            </value>
            <value>
                <fullName>Boom - Forum</fullName>
            </value>
            <value>
                <fullName>Boom - Polaris</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Cambridge - Think Starters</fullName>
            </value>
            <value>
                <fullName>Cornelsen - Prima Plus</fullName>
            </value>
            <value>
                <fullName>Dedact - Leswijs</fullName>
            </value>
            <value>
                <fullName>Delubas - Leesparade</fullName>
            </value>
            <value>
                <fullName>Deviant</fullName>
            </value>
            <value>
                <fullName>Driestar Educatief - Taalpunt</fullName>
            </value>
            <value>
                <fullName>Educatief - Banas</fullName>
            </value>
            <value>
                <fullName>EduHint - SmartRekenen</fullName>
            </value>
            <value>
                <fullName>Eigen materiaal</fullName>
            </value>
            <value>
                <fullName>Eisma</fullName>
            </value>
            <value>
                <fullName>EPN</fullName>
            </value>
            <value>
                <fullName>Essener - Thema&apos;s Maatschappijleer</fullName>
            </value>
            <value>
                <fullName>Exova</fullName>
            </value>
            <value>
                <fullName>FFrekenen</fullName>
            </value>
            <value>
                <fullName>Gamma (M)</fullName>
            </value>
            <value>
                <fullName>GS Compact (Uitgeverij Lambo)</fullName>
            </value>
            <value>
                <fullName>Hueber - Sicher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>