force-app/main/default/objects/Opportunity/fields/NumberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudents__c</fullName>
    <description>Number of students involved in the opportunity</description>
    <inlineHelpText>Number of students involved in the opportunity</inlineHelpText>
    <label>Number of Students</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>