force-app/main/default/objects/Opportunity/fields/Opleiding__c.field-meta.xml
<CustomField>
    <fullName>Opleiding__c</fullName>
    <description>Opleiding - This field is used as input for the formula-field &apos;Type of Education&apos;. Related to field &apos;TOE_Cluster&apos;. Both fields are filled by Visual Workflow.</description>
    <label>Opleiding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>