force-app/main/default/objects/Opportunity/fields/OpportunityCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Opportunity Case Safe ID</label>
    <type>Text</type>
</CustomField>