force-app/main/default/objects/Opportunity/fields/OpportunityRank__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRank__c</fullName>
    <inlineHelpText>This ranks the opportunity relative to others within the same company, based on its weighted score.</inlineHelpText>
    <label>OpportunityRank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>