force-app/main/default/objects/Opportunity/fields/OpportunityRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRecordTypeName__c</fullName>
    <description>Filed used in Opportunity Bulk Update flow to select opportunity record type in screen flow</description>
    <formula>RecordType.Name</formula>
    <label>Opportunity Record Type Name</label>
    <type>Text</type>
</CustomField>