force-app/main/default/objects/Opportunity/fields/OpportunityRefId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRefId__c</fullName>
    <description>Human readable ID in format: YY.NNNNN</description>
    <displayFormat>{YY}.{00000}</displayFormat>
    <label>Opportunity Reference ID</label>
    <type>AutoNumber</type>
</CustomField>