force-app/main/default/objects/Opportunity/fields/OpportunityScore__c.field-meta.xml
<CustomField>
    <fullName>OpportunityScore__c</fullName>
    <inlineHelpText>This score is assigned to an opportunity, summing up the values of all associated contacts and leads to indicate related customer activity.</inlineHelpText>
    <label>OpportunityScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>