force-app/main/default/objects/Opportunity/fields/OpportunityTraction__c.field-meta.xml
<CustomField>
    <fullName>OpportunityTraction__c</fullName>
    <inlineHelpText>This is the number of lead records feeding the opportunity score. A higher number means more interactions were found that could be related to this opportunity.</inlineHelpText>
    <label>OpportunityTraction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>