force-app/main/default/objects/Opportunity/fields/OrderComment__c.field-meta.xml
<CustomField>
    <fullName>OrderComment__c</fullName>
    <label>Order Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>