force-app/main/default/objects/Opportunity/fields/OrderPlaced__c.field-meta.xml
<CustomField>
    <fullName>OrderPlaced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate that an Order is placed (Liber Only)</description>
    <label>Order Placed</label>
    <type>Checkbox</type>
</CustomField>