force-app/main/default/objects/Opportunity/fields/OrderReference__c.field-meta.xml
<CustomField>
    <fullName>OrderReference__c</fullName>
    <label>Order Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>