force-app/main/default/objects/Opportunity/fields/OrderStartDate__c.field-meta.xml
<CustomField>
    <fullName>OrderStartDate__c</fullName>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>