force-app/main/default/objects/Opportunity/fields/OwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFullName__c</fullName>
    <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner fullname</label>
    <type>Text</type>
</CustomField>