force-app/main/default/objects/Opportunity/fields/OwnerSegment__c.field-meta.xml
<CustomField>
    <fullName>OwnerSegment__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Segment</label>
    <type>Text</type>
</CustomField>