force-app/main/default/objects/Opportunity/fields/PoO__c.field-meta.xml
<CustomField>
    <fullName>PoO__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PoO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>