force-app/main/default/objects/Opportunity/fields/PowerBI_link__c.field-meta.xml
<CustomField>
    <fullName>PowerBI_link__c</fullName>
    <description>URL to assets related to the school in PowerBI</description>
    <inlineHelpText>Link to book list in PowerBI</inlineHelpText>
    <label>PowerBI link</label>
    <type>Url</type>
</CustomField>