force-app/main/default/objects/Opportunity/fields/PreviousOwnerID__c.field-meta.xml
<CustomField>
    <fullName>PreviousOwnerID__c</fullName>
    <label>Previous OwnerID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>