force-app/main/default/objects/Opportunity/fields/Pricebook_name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_name__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook name</label>
    <type>Text</type>
</CustomField>