force-app/main/default/objects/Opportunity/fields/PricePerPupil__c.field-meta.xml
<CustomField>
    <fullName>PricePerPupil__c</fullName>
    <label>Price per pupil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>