force-app/main/default/objects/Opportunity/fields/PricingMethod__c.field-meta.xml
<CustomField>
    <fullName>PricingMethod__c</fullName>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PricingMethod</valueSetName>
    </valueSet>
</CustomField>