force-app/main/default/objects/Opportunity/fields/PrimaryContactEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactEmail__c</fullName>
    <formula>PrimaryContact__r.Email</formula>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>