force-app/main/default/objects/Opportunity/fields/PrimaryContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactFirstName__c</fullName>
    <formula>PrimaryContact__r.FirstName</formula>
    <label>Primary Contact First Name</label>
    <type>Text</type>
</CustomField>