force-app/main/default/objects/Opportunity/fields/PrimaryContactLastName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactLastName__c</fullName>
    <formula>PrimaryContact__r.LastName</formula>
    <label>Primary Contact Last Name</label>
    <type>Text</type>
</CustomField>