force-app/main/default/objects/Opportunity/fields/PrimaryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactPhone__c</fullName>
    <formula>PrimaryContact__r.Phone</formula>
    <label>Primary Contact Phone</label>
    <type>Text</type>
</CustomField>