force-app/main/default/objects/Opportunity/fields/ProcessAsOrder__c.field-meta.xml
<CustomField>
    <fullName>ProcessAsOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this box to send the Order data on closed won to the ERP.</inlineHelpText>
    <label>Process as Order</label>
    <type>Checkbox</type>
</CustomField>