force-app/main/default/objects/Opportunity/fields/QuoteReference__c.field-meta.xml
<CustomField>
    <fullName>QuoteReference__c</fullName>
    <description>This field contains the quote/opportunity reference used in the previous Salesforce environment</description>
    <inlineHelpText>This field contains the quote/opportunity reference used in the previous Salesforce environment</inlineHelpText>
    <label>QuoteReference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>