force-app/main/default/objects/Opportunity/fields/QuoteVersion__c.field-meta.xml
<CustomField>
    <fullName>QuoteVersion__c</fullName>
    <label>QuoteVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>