force-app/main/default/objects/Opportunity/fields/ReasonDiscarded__c.field-meta.xml
<CustomField>
    <fullName>ReasonDiscarded__c</fullName>
    <description>Reason discarded to be populated when the opportunity is updated to the Discarded stage. Only applicable to Plantyn.</description>
    <label>Reason discarded</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Already Chosen other method</fullName>
            </value>
            <value>
                <fullName>2-Lead for next sales season</fullName>
            </value>
            <value>
                <fullName>3-Too late available</fullName>
            </value>
            <value>
                <fullName>4-Content</fullName>
            </value>
            <value>
                <fullName>5-Duplicate/test/wrong data</fullName>
            </value>
            <value>
                <fullName>6-Wrong change information</fullName>
            </value>
            <value>
                <fullName>7-Unknown</fullName>
            </value>
            <value>
                <fullName>8-MQL (season close)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>