force-app/main/default/objects/Opportunity/fields/ReasonLost__c.field-meta.xml
<CustomField>
    <fullName>ReasonLost__c</fullName>
    <label>Reason lost/won</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andere</fullName>
            </value>
            <value>
                <fullName>Author</fullName>
            </value>
            <value>
                <fullName>Bad experience accountmanager</fullName>
            </value>
            <value>
                <fullName>Bad experience delivery</fullName>
            </value>
            <value>
                <fullName>Bad experience services</fullName>
            </value>
            <value>
                <fullName>Bad service Noordhoff</fullName>
            </value>
            <value>
                <fullName>Begeleider/auteur</fullName>
            </value>
            <value>
                <fullName>Beoordelingsmateriaal niet op tijd klaar</fullName>
            </value>
            <value>
                <fullName>Booklist incorrect</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Colleague works with another method</fullName>
            </value>
            <value>
                <fullName>Commerciele actie</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Competitor Author</fullName>
            </value>
            <value>
                <fullName>Competitor Strength</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Corona</fullName>
            </value>
            <value>
                <fullName>Coronavirus</fullName>
            </value>
            <value>
                <fullName>Course discontinued</fullName>
            </value>
            <value>
                <fullName>Customer initiative cancelled</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Didactic cross and upsell</fullName>
            </value>
            <value>
                <fullName>Didactic reason</fullName>
            </value>
            <value>
                <fullName>Didactische reden</fullName>
            </value>
            <value>
                <fullName>Difficult implementation, technical</fullName>
            </value>
            <value>
                <fullName>Digital material</fullName>
            </value>
            <value>
                <fullName>Double opportunity created</fullName>
            </value>
            <value>
                <fullName>Eigen materiaal docent</fullName>
            </value>
            <value>
                <fullName>Eigen platform</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>