force-app/main/default/objects/Opportunity/fields/ReasonLostDescription__c.field-meta.xml
<CustomField>
    <fullName>ReasonLostDescription__c</fullName>
    <label>Reason Lost Description</label>
    <type>TextArea</type>
</CustomField>