force-app/main/default/objects/Opportunity/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <displayFormat>OPP-{0}</displayFormat>
    <label>Reference</label>
    <type>AutoNumber</type>
</CustomField>