force-app/main/default/objects/Opportunity/fields/SafeLeadId__c.field-meta.xml
<CustomField>
    <fullName>SafeLeadId__c</fullName>
    <label>SafeLeadId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>