force-app/main/default/objects/Opportunity/fields/SalesSeasonSorted__c.field-meta.xml
<CustomField>
    <fullName>SalesSeasonSorted__c</fullName>
    <description>The original Sales Season field cannot be used for sorting on an opportuniteis related list because of inactive picklist values.</description>
    <formula>TEXT(Salesseason__c)</formula>
    <label>Sales Season</label>
    <type>Text</type>
</CustomField>