force-app/main/default/objects/Opportunity/fields/SaveID__c.field-meta.xml
<CustomField>
    <fullName>SaveID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SaveID</label>
    <type>Text</type>
</CustomField>