force-app/main/default/objects/Opportunity/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <description>For display purposes only!
For He/Ve</description>
    <formula>Account.School__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>