force-app/main/default/objects/Opportunity/fields/School_name__c.field-meta.xml
<CustomField>
    <fullName>School_name__c</fullName>
    <formula>IF(Account.Parent.Name =null , Account.Name , Account.Parent.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School name</label>
    <type>Text</type>
</CustomField>