force-app/main/default/objects/Opportunity/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HE</fullName>
                <label>Higher Education</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <label>Primary Education</label>
            </value>
            <value>
                <fullName>VE</fullName>
                <label>Vocational Education</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>Secondary Education</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>