force-app/main/default/objects/Opportunity/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semester 1</fullName>
            </value>
            <value>
                <fullName>Semester 2</fullName>
            </value>
            <value>
                <fullName>Blok 1 – Semester 1</fullName>
            </value>
            <value>
                <fullName>Blok 2</fullName>
            </value>
            <value>
                <fullName>Blok 3 – Semester 2</fullName>
            </value>
            <value>
                <fullName>Blok 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>