force-app/main/default/objects/Opportunity/fields/ServiceValue__c.field-meta.xml
<CustomField>
    <fullName>ServiceValue__c</fullName>
    <label>ServiceValue</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamilyType__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>